# beach-api

./: LICENSE  README.md  app.py  docker-compose.yml  pyproject.toml  schema.graphql
api/: schema.py
api/mutation/: __init__.py  add_comment.py  delete_comment.py  edit_comment.py  rate_beach.py
api/query/: __init__.py  beach.py  beaches.py
api/type/: __init__.py  beach.py  comment.py
postgres/: tables.sql  values.sql
